This is the changelog for Ebethron Currency Converter
2011-03-05 Einar Uvsløkk <einar.uvslokk@linux.com>
	Commited project to github
	Restructuring the repo

2011-03-04 Einar Uvsløkk <einar.uvslokk@linux.com>
	* version:
	Changed to version 0.2
	* setup.py:
	Created a setup.py file for packaging and distribution

2010-06-16 Einar Uvsløkk <einar.uvslokk@linux.com>
	* version:
	Initial version 0.1
	Features:
		* gtk:
		Using glade to provide a gtk interface
		* console:
		Also possible to interact with the program only from a console
		Features: