@@ -1,26 +1,0 @@
-AUTHORS
-COPYING
-ChangeLog
-README
-setup.py
-bin/cconverter
-cconverter/__init__.py
-cconverter/cconverter.py
-cconverter/core/__init__.py
-cconverter/core/app_info.py
-cconverter/core/currency.py
-cconverter/gui/__init__.py
-cconverter/gui/cconverter_gtk.py
-cconverter/lib/__init__.py
-cconverter/lib/context.py
-cconverter/lib/path.py
-data/cconverter.desktop
-data/cconverter.glade
-data/icons/cconverter.png
-data/icons/hicolor/16x16/apps/cconverter.png
-data/icons/hicolor/22x22/apps/cconverter.png
-data/icons/hicolor/24x24/apps/cconverter.png
-data/icons/hicolor/32x32/apps/cconverter.png
-data/icons/hicolor/48x48/apps/cconverter.png
-data/icons/hicolor/scalable/apps/cconverter.svg
-doc/man1/cconverter.1
